[package]
name = "usbcomm"
version = "0.1.0"
edition = "2024"

[dependencies]
rusb = "0.9"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
windows = { version = "0.54", features = [
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Foundation",
    "Win32_System_Registry"
] }